[package]
name = "goose_packet"
version = "0.1.0"
authors = ["Jiahao Xie <orbitdoc@outlook.com>", "Maciej Skrzypek <wintermute101 [at] gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pnet]
version = "0.35"

# https://github.com/libpnet/libpnet/issues/481
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [ "std" ] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"